--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ body {
     font-family: 'Playfair Display', serif;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
+.fig img {
+    width: 30vw;
+    mix-blend-mode: multiply;
+    margin: 0 auto;
+    margin-top: 30px;
+    display: block;
+}
+
 pre { display: none;
 }
 
@@ -15,26 +28,36 @@ p {
     width: 40vw;
     margin-left: auto;
     margin-right: auto;
-    font-size: 17px;
+    font-size: 19px;
     font-family: 'Roboto Condensed', sans-serif;
     font-kerning: auto;
-    line-height: 23px;
+    line-height: 25px;
 }
 
 h2 {
-    margin-left: 25%;
+    margin-left: 25vw;
     font-family: 'Playfair Display', serif;
 }
 
 h1 {
     text-align: center;
-    font-size: 90px;
+    font-size: 95px;
     font-family: 'Playfair Display', serif;
+}
+h5 {
+    margin: 0 auto;
+    margin-left: 60vw;
+    color: maroon;
 }
 
 b {
     font-size: 20px;
     font-family: 'Playfair Display', serif;
+}
+
+big b {
+    font-size: 25px;
+    color: maroon;
 }
 
 .dropcap {
@@ -43,4 +66,51 @@ b {
     font-family: 'Playfair Display', serif;
 }
 
+h2:first-of-type {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+h2:nth-of-type(2) {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.fig ~ h5 {
+    display: none;
+}
+
+.fig:nth-of-type(2) {
+    display: none;
+}
+
+
+hr {
+    display: none;
+}
+
+blockquote > p {
+    padding-left: 40px;
+}
+
+br:last-of-type {
+    display: none;
+}
+
+br:first-child {
+    display: none;
+}
+
+p:nth-child(2n+1) {
+    color: #250202;
+}
+
+.fig:first-of-type {
+    padding-bottom: 200px;
+}
+
+p + h2 {
+    color: #350505;
+}
